git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@474 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/qfa/vignettes/visTool.Rmd
+++ b/pkg/qfa/vignettes/visTool.Rmd
@@ -131,4 +131,7 @@ Again, we can load an alternative list of genes for highlighting: sets of genes 
 visAll(buildGO)
 ```
 
-The demo datasets from Addinall et al. 2011, included in the qfa package, will be present for comparison.
+The demo datasets from Addinall et al. 2011, included in the qfa package, will always be present for comparison.
+
+You can <a href="javascript:window.print()">print</a> this document to have a physical copy to hand while using the qfaR visualisation tool.
+
