--- a/pkg/qfa/vignettes/iRVis.Rmd
+++ b/pkg/qfa/vignettes/iRVis.Rmd
@@ -11,7 +11,7 @@ You can <a href="javascript:window.print()">print</a> this document to have a ph
 Introduction 
 ------------
 
-By comparing the fitnesses of independent microbial strains under two different environmental or genetic conditions (e.g. query and control conditions) we can rank and compare the strength of gene-gene or gene-environment interactions.  Several technologies for measuring microbial fitness exist, including Quantitative Fitness Analysis ([QFA] [qfa]), Synthetic Genetic Array (SGA) and liquid culture growth assays.  Genome-wide fitness comparisons can become difficult to visualise by static, 2D scatterplot due to the sheer number of strains examined because simultaneous labelling of ~4,000 genes on a single plot is not practical. For example, in Figure 1, the labels for many genes are obscured.
+By comparing the fitnesses of independent microbial strains grown under two different environmental or genetic conditions (e.g. query and control conditions) we can rank and compare the strength of gene-gene or gene-environment interactions.  Several technologies for measuring microbial fitness exist, including Quantitative Fitness Analysis ([QFA] [qfa]), Synthetic Genetic Array (SGA) and liquid culture growth assays.  Genome-wide fitness comparisons can become difficult to visualise by static, 2D scatterplot due to the sheer number of strains examined because simultaneous labelling of ~4,000 genes on a single plot is not practical. For example, in Figure 1, the labels for many genes are obscured.
 
 <a href="http://www.plosgenetics.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pgen.1001362.g002&representation=PNG_L"><img src="http://www.plosgenetics.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pgen.1001362.g002&representation=PNG_M" width=750px></a>
 
